<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <!--<SwitchPreference-->
        <!--android:defaultValue="true"-->
        <!--android:key="example_switch"-->
        <!--android:summary="@string/pref_description_social_recommendations"-->
        <!--android:title="@string/pref_title_social_recommendations"/>-->

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:inputType="textCapWords"
        android:key="@string/key_session_name_single"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_session_name_single"/>

    <EditTextPreference
        android:capitalize="words"
        android:inputType="textCapWords"
        android:key="@string/key_sessions_name_plural"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_sessions_name_plural"/>

    <ListPreference
        android:defaultValue="-1"
        android:key="@string/key_work_calendar"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_work_calendar"/>

</PreferenceScreen>
