<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.yoavgibri.myincome.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <!--<item-->
        <!--android:id="@+id/action_all_jobs"-->
        <!--android:title="@string/all_sessions"-->
        <!--/>-->

    <item
        android:id="@+id/action_delete_database"
        android:title="@string/delete_all_sessions"
        />

    <item
        android:id="@+id/action_start_debug"
        android:title=""
        android:icon="@drawable/ic_action_debug"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_sign_out"
        android:title="@string/sign_out"/>

    <!--<item-->
        <!--android:id="@+id/action_log"-->
        <!--android:title="@string/logToFile"/>-->


</menu>
