<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.yoavgibri.myincome.addUpdateSessionActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutClientName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <AutoCompleteTextView
                    android:id="@+id/acTextViewClientName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/client"
                    android:imeOptions="actionNext"
                    android:inputType="textAutoComplete"
                    android:completionThreshold="1"
                    android:lines="1"
                    android:maxLength="40"
                    />

                <requestFocus
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageButton
                    android:id="@+id/imageButtonSessionTypes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/delete_24px_dark"
                    android:background="@color/transparent"
                    android:visibility="gone"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layoutSpinnerSessionTypes"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">


                    <android.support.v7.widget.AppCompatSpinner
                        android:id="@+id/spinnerSessionTypes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dropdown"/>

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editTextSessionTypes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/new_session_type"
                        android:visibility="gone"/>

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="0dp"
                    >

                    <TextView
                        android:id="@+id/TextViewJobTimeDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:hint="01.01.2011"
                        android:textSize="30sp"/>

                    <!--<android.support.design.widget.TextInputEditText-->
                    <!--android:id="@+id/editTextJobTimeDate"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:hint="@string/date"-->
                    <!--android:inputType="date"/>-->

                </android.support.design.widget.TextInputLayout>

                <!--<android.support.design.widget.TextInputLayout-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="1">-->

                <!--<android.support.design.widget.TextInputEditText-->
                <!--android:id="@+id/editTextJobTimeHour"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:hint="@string/hour"-->
                <!--android:inputType="time"/>-->


                <!--</android.support.design.widget.TextInputLayout>-->


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <CheckBox
                    android:id="@+id/checkBoxIsPaid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:checked="false"
                    android:text="@string/paid"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayoutPaymentAmount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editTextPaymentAmount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:hint="@string/payment_amount"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:maxLength="9"/>

                </android.support.design.widget.TextInputLayout>

                <!--android:text="@string/Paid"-->

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editTextComment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/comment"
                    android:imeOptions="actionNext"/>


            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
